--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <button onclick="performAction('/action2')">2</button>
         <button onclick="performAction('/action3')">3</button>
         <button onclick="performAction('/action4')">4</button>
-        <button onclick="performAction('/action5')">5</button>
+        <button onclick="performAction('/action5')">VK</button>
         <button onclick="performAction('/action6')">Sudilkovsky</button>
     </div>
     <div id="map"></div>
